# spiral

./: .gitignore  ARCHITECTURAL_GUIDE.md  BENCHMARK.md  BENCHMARK_RESULTS.md  Cargo.toml  GEMINI.md  IOT.md  Procfile  QUERY_ACCELERATION.md  README.md  aspiral-dev.skill  aspiral-docs.skill  aspiral-qa.skill  aspiral.control  bench_1.sql  bench_setup.sql  benchmark.sql  benchmark_100m.sql  benchmark_1b.sql  benchmark_1b_acceleration.sql  benchmark_3d.sql  benchmark_4d.sql  benchmark_acceleration.sql  benchmark_comprehensive.sql  benchmark_core.sql  benchmark_iot.sql  benchmark_iot_adaptive.sql  benchmark_iot_comprehensive.sql  benchmark_iot_locality.sql  benchmark_iot_storage.sql  benchmark_locality.sql  benchmark_real_world.sql  benchmark_storage.sql  benchmark_zorder.sql  demo.sql  frontend_locality.md  ingest_aspiral.sql  issue_body.md  master_walkthrough.sql  math_improvements.md  (+16 more)
.github/workflows/: ci.yml  release.yml
Formula/: spiral.rb
benchmarks/: README.md  acceleration.sql  comprehensive.sql  core.sql  iot.sql  legacy_comprehensive.sql  multi_dim.sql  multi_dim_4d.sql  real_world.sql  scale.sql  storage_optimization.sql  tenants_timeline.sql  zorder_locality.sql
clickbench/: generate_data.py  load_all.sh  load_deltax.sh  load_timescale.sh  optimized_spiral.sql  run_benchmark.sql  run_benchmark_v2.sql  run_benchmark_v3.sql  setup_deltax.sql  setup_spiral.sql  setup_timescale.sql
clickbench/scripts/: create.sql
docs/: ARCHITECTURAL_GUIDE.md  BENCHMARK.md  BENCHMARK_RESULTS.md  DYNAMIC_TENANT_TIMELINE.md  GITHUB_ISSUES.md  IOT.md  PLANNER_EVOLUTION.md  QUERY_ACCELERATION.md  TAM_AUDIT.md  frontend_locality.md  intro.md  math_improvements.md
examples/: README.md  acceleration_walkthrough.sql  basic_walkthrough.sql  demo.sql  hacker_walkthrough.sql  master_walkthrough.sql  multi_domain_demo.sql  multi_domain_demo_light.sql  multi_domain_demo_light_emulator.sql  short_walkthrough.sql  spiral_hacker_walkthrough.cast  walkthrough.sql
issues/: 001-jsonb-serialization-bottleneck.md
scripts/: bump-version.sh  check-all.sh  demo_setup.sql  emulate.sh  multi_simulator.sh  release.sh  seed_iot.sql  setup_storage_demo.sql  update-homebrew.sh
skills/aspiral-dev/: SKILL.md
skills/aspiral-docs/: SKILL.md
skills/aspiral-qa/: SKILL.md
skills/spiral-dev/: SKILL.md
skills/spiral-docs/: SKILL.md
skills/spiral-qa/: SKILL.md
sql/: aspiral.sql  spiral.sql
src/: backfill.rs  bgworker.rs  catalog.rs  hooks.rs  hooks.rs_walk_expr  lib.rs  mvcc.rs  rollup.rs  stats.rs  storage.rs  tam.rs  tam_state.rs  validate.rs  zorder.rs
tests/e2e/: debug.spec.js  perf_diag.spec.js  performance.spec.js  responsiveness.spec.js  vortex.spec.js  worker_performance.spec.js
tests/golden/: expected.json  (+1 more)
vortex-server/: Cargo.toml  README.md
vortex-server/src/: main.rs
vortex-ui/: Cargo.toml  index.html
vortex-ui/src/: main.rs
(+46 files in other folders)
