[package]
name = "vortex-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
futures-util = "0.3.32"
gloo-net = "0.7.0"
gloo-timers = { version = "0.4.0", features = ["futures"] }
leptos = { version = "0.8.19", features = ["csr", "nightly"] }
leptos_router = "0.8.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.121"
web-sys = { version = "0.3.98", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document", "Element", "DomRect", "MouseEvent", "Location", "Storage"] }
gloo-utils = { version = "0.3.0", features = ["serde"] }
js-sys = "0.3.77"
